Fix the old numpy int problem.

--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,17 +1,17 @@
-opencv-python==3.4.5.20
-imgaug==0.4.0
-fontTools==4.12.1
-lmdb==0.98
-pillow==6.2.2
+opencv-python
+imgaug
+fontTools
+lmdb
+pillow
 numpy
 tenacity
 fire
 tqdm
 loguru
 cffi
-sphinx==3.1.2
+sphinx
 sphinx-rtd-theme
-recommonmark==0.6.0
+recommonmark
 sphinx-markdown-tables
 dataclasses
 pytest
